--- a/app/src/main/res/layout/activity_dagsorden.xml
+++ b/app/src/main/res/layout/activity_dagsorden.xml
@@ -68,7 +68,7 @@
                 android:id="@+id/etOverskrift"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Overskrift"
+                android:hint="Mødepunkt"
                 android:textSize="22sp" />
 
             <EditText
