--- a/app/src/main/res/layout/activity_dagsorden.xml
+++ b/app/src/main/res/layout/activity_dagsorden.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -56,6 +56,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:background="@color/colorPrimary"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
@@ -76,13 +77,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Beskrivelse"
+                android:paddingTop="10dp"
                 android:textSize="14sp" />
 
             <Button
                 android:id="@+id/btnTilfoj"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_marginLeft="100dp"
+                android:layout_marginLeft="325dp"
                 android:background="@drawable/addtryk"
                 android:textColor="@android:color/background_light" />
 
@@ -98,12 +100,11 @@
 
             <Button
                 android:id="@+id/btnOpret"
-                android:layout_width="225dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="85dp"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/knap_baggrund"
-                android:text="Afslut"
+                android:text="Opret dagsorden"
                 android:textColor="@android:color/background_light"
                 android:visibility="visible" />
         </LinearLayout>
