--- a/app/src/main/res/layout/activity_deltager_dagsorden.xml
+++ b/app/src/main/res/layout/activity_deltager_dagsorden.xml
@@ -64,14 +64,13 @@
 
         <Button
             android:id="@+id/feedbackBtn"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/knap_baggrund"
             android:text="Start feedback"
+            android:textAlignment="center"
             android:textColor="@android:color/background_light" />
     </LinearLayout>
 
